Home followers updates

--- a/cmd/frontend/assets/sass/_home.scss
+++ b/cmd/frontend/assets/sass/_home.scss
@@ -36,7 +36,7 @@ body.dark {
             height: 300px;
             position: relative;
             z-index: 3;
-            margin-right: 300px;
+            margin-right: 305px;
         }
 
         #followers-legend {
@@ -50,13 +50,13 @@ body.dark {
             div {
                 overflow: hidden;
                 white-space: nowrap;
-                line-height: 28px;
-                height: 28px;
-                margin: 1px 0;
+                line-height: 29px;
+                height: 29px;
+                margin-bottom: 1px;
 
                 img {
-                    height: 28px;
-                    width: 28px;
+                    height: 29px;
+                    width: 29px;
                 }
             }
         }
