--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -103,7 +103,10 @@
             <div class="col-12 mb-4 d-none d-lg-block">
 
                 <div class="card">
-                    <div class="card-header">Upcoming Games (Two Weeks)</div>
+                    <div class="card-header">
+                        Upcoming Games (Next Two Weeks) - Ordered by followers
+                        <a href="/games/upcoming" class="float-right">See all Upcoming Games</a>
+                    </div>
                     <div class="card-body">
                         <div id="followers-wrapper">
                             <div id="followers"></div>
