Add loading spinner

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -109,7 +109,9 @@
                     </div>
                     <div class="card-body">
                         <div id="followers-wrapper">
-                            <div id="followers"></div>
+                            <div id="followers">
+                                <i class="fas fa-spinner fa-spin"></i>
+                            </div>
                             <div id="followers-legend"></div>
                         </div>
                     </div>
