--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -12,7 +12,7 @@
     {{ range .CSSFiles }}
         <link rel="stylesheet" href="{{ .URL }}" integrity="{{ .Integrity }}" crossorigin="anonymous">
     {{ end }}
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.23/fh-3.1.6/rg-1.1.1/datatables.min.css"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.23/fh-3.1.6/rg-1.1.1/b-1.6.5/b-html5-1.6.5/datatables.min.css"/>
     <link rel="stylesheet" href="/assets/dist/main.css?c={{ .AssetTime }}">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/sa-bg-180x180.png">
