--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -28,7 +28,7 @@
     {{ range .JSFiles }}
         <script src="{{ .URL }}" integrity="{{ .Integrity }}" crossorigin="anonymous"></script>
     {{ end }}
-    <script src="https://cdn.datatables.net/v/bs4/dt-1.10.20/fh-3.1.6/rg-1.1.1/datatables.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs4/dt-1.10.20/fh-3.1.6/rg-1.1.1/b-1.6.5/b-html5-1.6.5/datatables.min.js"></script>
 
     <script>const user = JSON.parse({{ .GetUserJSON }});</script>
     <script src="/assets/dist/main.js?c={{ .AssetTime }}" rel="stylesheet"></script>
