--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -47,7 +47,9 @@
                 <div class="card mb-4">
                     <h5 class="card-header">Members</h5>
                     <div class="card-body">
-                        <div id="group-chart"></div>
+                        <div id="group-chart">
+                            <i class="fas fa-spinner fa-spin"></i>
+                        </div>
                     </div>
                 </div>
 
