--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -62,7 +62,7 @@
                     </div>
                 {{ end }}
 
-                <h5>Global Steam Members</h5>
+                <h5>Members</h5>
                 <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-row-type="players">
                     <thead class="thead-light">
                     <tr>
