--- a/cmd/frontend/templates/group.gohtml
+++ b/cmd/frontend/templates/group.gohtml
@@ -56,7 +56,7 @@
                 </div>
 
                 {{ if eq .Group.Type "group" }}
-                    <div class="card mb-4">
+                    <div class="card mb-4" id="group-description">
                         <h5 class="card-header">Description</h5>
                         <div class="card-body">{{ .Summary }}</div>
                     </div>
