Rename stat columns

--- a/cmd/frontend/templates/stats_list.gohtml
+++ b/cmd/frontend/templates/stats_list.gohtml
@@ -39,9 +39,9 @@
                             <th scope="col">{{ .Type.Title }}</th>
                             <th scope="col">Games</th>
                             <th scope="col">Games %</th>
-                            <th scope="col">Mean Price</th>
-                            <th scope="col">Mean Score</th>
-                            <th scope="col">Mean Players</th>
+                            <th scope="col">Price (Avg)</th>
+                            <th scope="col">Score (Avg)</th>
+                            <th scope="col">Players (Avg)</th>
                             <th scope="col">Max Discount</th>
                         </tr>
                         </thead>
