Update rank columns

--- a/cmd/frontend/templates/badge.gohtml
+++ b/cmd/frontend/templates/badge.gohtml
@@ -67,7 +67,7 @@
                     <table class="table table-hover table-striped table-counts mb-0" data-ordering="false" data-row-type="players" data-path="/badges/{{ .Badge.ID }}/players.json{{ if .Badge.BadgeFoil }}?foil=1{{ end }}">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col" class="thin">Rank</th>
+                            <th scope="col" class="thin">#</th>
                             <th scope="col">Player</th>
                             <th scope="col">Level</th>
                             <th scope="col" class="thin">Achieved</th>
