--- a/cmd/frontend/assets/sass/_global.scss
+++ b/cmd/frontend/assets/sass/_global.scss
@@ -636,7 +636,7 @@ div.json-hover {
 
     img {
         max-width: 100%;
-        max-height: 400px;
+        //max-height: 400px;
         display: block;
     }
 
