Hide top link on mobile

--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -85,7 +85,7 @@
 
 <a {{ if ne .BackgroundLink "" }}href="{{ .BackgroundLink }}"{{end}} id="bg" {{ if ne .Background "" }}style="background-image: url('https://images.weserv.nl/?url={{ .Background }}&output=webp&q=40');"{{ end }} title="{{ .BackgroundTitle }}"></a>
 
-<div id="top" class="rounded">
+<div id="top" class="rounded d-none d-lg-block">
     <i class="fas fa-level-up-alt"></i>
 </div>
 
