--- a/cmd/frontend/assets/sass/_global.scss
+++ b/cmd/frontend/assets/sass/_global.scss
@@ -298,10 +298,15 @@ video {
     display: block;
     position: relative;
     color: red;
-    margin-top: -14px;
-    margin-bottom: 4px;
+    margin-top: -8px;
+    margin-bottom: 0;
     text-align: center;
     text-shadow: 0 0 10px #1b2738, 0 0 10px #1b2738;
+
+    @include media-breakpoint-up(lg) {
+        margin-top: -14px;
+        margin-bottom: 4px;
+    }
 }
 
 //
