--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -58,9 +58,9 @@
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#stats" role="tab">Library Stats</a>
                     </li>
-                    {{/*                    <li class="nav-item">*/}}
-                    {{/*                        <a class="nav-link" data-toggle="tab" href="#wishlist" role="tab">Wishlist ({{ comma .Player.WishlistAppsCount }})</a>*/}}
-                    {{/*                    </li>*/}}
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#wishlist" role="tab">Wishlist ({{ comma .Player.WishlistAppsCount }})</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#achievements" role="tab">Achievements ({{ comma .Player.AchievementCount }})</a>
                     </li>
