Fix price change filters

--- a/cmd/frontend/templates/price_changes.gohtml
+++ b/cmd/frontend/templates/price_changes.gohtml
@@ -1,7 +1,7 @@
 {{define "price_changes"}}
     {{ template "header" . }}
 
-    <div class="container" id="price-changes-page">
+    <div class="container" id="price-changes-page" data-top-price="{{ .TopPrice }}">
 
         <div class="jumbotron">
 
