Improve latest commands

--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -77,7 +77,7 @@
         </div>
 
         {{ if .IsAdmin }}
-            <div class="card">
+            <div class="card" id="recent-card">
                 <h5 class="card-header">Recent Requests</h5>
                 <div class="card-body">
 
@@ -93,7 +93,6 @@
                             </tr>
                             </thead>
                             <tbody>
-
                             </tbody>
                         </table>
                     </div>
