Update home news

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -284,9 +284,11 @@
             <div class="col-12">
 
                 <div class="card" id="news">
+                    <h5 class="card-header">News</h5>
                     <div class="card-body">
                         <i class="fas fa-spinner fa-spin"></i>
                     </div>
+                    <a href="/news" class="card-footer">More Game News</a>
                 </div>
 
             </div>
