Fix app same owners

--- a/cmd/frontend/templates/app.gohtml
+++ b/cmd/frontend/templates/app.gohtml
@@ -274,7 +274,7 @@
                                             </table>
                                         </div>
                                     </div>
-                                    <div class="card-footer" data-link-tab="similar">More!</div>
+                                    <div class="card-footer" data-link-tab="similar">See top 100</div>
                                 </div>
 
                                 <div class="card mt-3">
