Produce to player search helper

--- a/cmd/frontend/templates/admin/queues.gohtml
+++ b/cmd/frontend/templates/admin/queues.gohtml
@@ -29,6 +29,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label class="col-sm-3 col-form-label" for="player-id-search">Player ID (Search):</label>
+                        <div class="col-sm-3">
+                            <input type="text" name="player-id-search" id="player-id-search" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label class="col-sm-3 col-form-label" for="bundle-id">Bundle ID:</label>
                         <div class="col-sm-3">
                             <input type="text" name="bundle-id" id="bundle-id" class="form-control">
