--- a/cmd/frontend/templates/players_add.gohtml
+++ b/cmd/frontend/templates/players_add.gohtml
@@ -21,24 +21,12 @@
                         <div class="col-sm-6">
 
                             <div class="form-group">
-                                <label for="search">Player</label>
+                                <label for="search">Player ID / Player URL</label>
                                 <input type="search" class="form-control" id="search" name="search" value="{{ .Default }}" autofocus required>
                             </div>
 
                             <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
 
-                        </div>
-                        <div class="col-sm-6">
-                            <label>Accepted formats</label>
-                            <ul>
-                                <li>vanity_url</li>
-                                <li>12345678901234567</li>
-                                <li>STEAM_0:0:12345</li>
-                                <li>[U:1:12345]</li>
-                                <li>https://steamcommunity.com/id/vanity_url/</li>
-                                <li>https://steamcommunity.com/profiles/12345678901234567/</li>
-                                <li>https://steamcommunity.com/profiles/[U:1:12345]/</li>
-                            </ul>
                         </div>
                     </div>
                 </form>
