Save bundle prices

--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -29,6 +29,10 @@
                 <div class="table-responsive">
                     <table class="table mt-3">
                         <tr>
+                            <th>Price</th>
+                            <td>{{ .Price }}</td>
+                        </tr>
+                        <tr>
                             <th scope="row" nowrap="nowrap" class="thin">Discount</th>
 
                             <td>Current: <strong>{{ .Bundle.Discount }}%</strong><br>
