--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -20,6 +20,7 @@
                         <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Discount</th>
+                            <th scope="col">Price</th>
                             <th scope="col">Apps</th>
                             <th scope="col">Packages</th>
                             <th scope="col">Updated At</th>
