--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -97,7 +97,10 @@
                             <thead class="thead-light">
                             <tr>
                                 <th scope="col">Apps</th>
+                                <th scope="col">Price</th>
                                 <th scope="col">Type</th>
+                                <th scope="col">Developers</th>
+                                <th scope="col">Publishers</th>
                                 <th scope="col" data-disabled>Platforms</th>
                             </tr>
                             </thead>
@@ -109,7 +112,10 @@
                                             <div class="name">{{ .GetName }}</div>
                                         </div>
                                     </td>
+                                    <td nowrap="nowrap">{{ (.GetPrices.Get $.UserProductCC.ProductCode).GetFinal }}</td>
                                     <td>{{ .GetType }}</td>
+                                    <td>{{ .GetDevelopersHTML }}</td>
+                                    <td>{{ .GetPublishersHTML }}</td>
                                     <td class="platforms">{{ .GetPlatformImages }}</td>
                                 </tr>
                             {{ end }}
